src/styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: 'BundesSans';
    src: url('../../public/assets/fonts/BundesSans-Web-Regular.woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'BundesSans';
    src: url('../../public/assets/fonts/BundesSans-Web-Bold.woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'BundesSans';
    src: url('../../public/assets/fonts/BundesSans-Web-Medium.woff');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

html,
body {
  @apply text-textblack;
  padding: 0;
  margin: 0;
  font-size: 16px;
  font-family: BundesSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  hyphens: auto;
  word-break: break-word;
}

@media all and (max-width: 768px) {
    body, html {
        font-size: 12px;
    }
}


@-moz-document url-prefix() {
    html, body {
        word-break: normal!important;
    }
 }

a {
  color: inherit;
  text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

* {
  box-sizing: border-box;
}

.results {
    max-width: 100vw;
}


nav {
    min-width: 270px;
}

.branding {
    min-width: 270px;
}


pre {
    background-color: transparent!important;
}

@keyframes spin {
    from {transform:rotate(0deg);}
    to {transform:rotate(360deg);}
}

.rotate {
    animation: spin 1.5s linear infinite;
}
.no-hyphens {
    hyphens: none;
}

.draganddrop {
    min-height: 200px;
}

th > div {
    display: flex;
    align-items: center;
    flex-direction: row;
}

.menu {
    min-width: 200px;
}

.tooltip-container .tooltip {
    pointer-events: none;
}
.tooltip-container:hover .tooltip {
    opacity: 1;
    transform: scale(1);
    pointer-events: all;
}

.tooltip {
    min-width: 300px;
    pointer-events: none;
}

.modal {
    min-width: 600px;
}

.line-height-0 {
    line-height: 0;
}

@media screen and (max-width: 768px) {
    .modal {
        min-width: 100vw;
    }
}


article  {
    h1 {
        @apply font-medium text-2xl mb-4
    }
    h2 {
        @apply text-xl mb-5 mt-10 text-blau-100
    }
    p {
        @apply mb-5;
      
    }
    ul {
        @apply mb-5 pl-5;
        li {
            @apply mb-2;
            list-style-type: square;
        }
    }
    a {
        @apply border-b hover:text-blau-100 hover:no-underline border-b-blau-100;
    }
    b {
        @apply font-medium;
    }

}

a {
    @apply hover:border-b hover:text-blau-100 font-medium hover:underline border-b border-transparent
}

#toast-container {
    z-index: 9999;
}
.z-100 {
    z-index: 100;
}

.z-200 {
    z-index: 200;
}

.beneath-header {
    top: 65px;
}
.zoom-button {
    top: 75px;

}

.DropdownMenuContent,
.DropdownMenuSubContent {
  min-width: 220px;
  animation-duration: 400ms;
  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
  will-change: transform, opacity;
  :first-child {
   margin-top: 0;
  }
    :last-child {
     margin-bottom: 0;
    }
}

[data-radix-popper-content-wrapper] {
    z-index: 110!important;
}

.DropdownMenuContent[data-side='top'],
.DropdownMenuSubContent[data-side='top'] {
  animation-name: slideDownAndFade;
}
.DropdownMenuContent[data-side='right'],
.DropdownMenuSubContent[data-side='right'] {
  animation-name: slideLeftAndFade;
}
.DropdownMenuContent[data-side='bottom'],
.DropdownMenuSubContent[data-side='bottom'] {
  animation-name: slideUpAndFade;
}
.DropdownMenuContent[data-side='left'],
.DropdownMenuSubContent[data-side='left'] {
  animation-name: slideRightAndFade;
}

@keyframes slideUpAndFade {
    from {
      opacity: 0;
      transform: translateY(2px);
    }
    to {
      opacity: 1;
      transform: translateY(0);
    }
  }
  
  @keyframes slideRightAndFade {
    from {
      opacity: 0;
      transform: translateX(-2px);
    }
    to {
      opacity: 1;
      transform: translateX(0);
    }
  }
  
  @keyframes slideDownAndFade {
    from {
      opacity: 0;
      transform: translateY(-2px);
    }
    to {
      opacity: 1;
      transform: translateY(0);
    }
  }
  
  @keyframes slideLeftAndFade {
    from {
      opacity: 0;
      transform: translateX(2px);
    }
    to {
      opacity: 1;
      transform: translateX(0);
    }
  }
  

  
.DialogOverlay {
    position: fixed;
    inset: 0;
    animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
}
  
.DialogContent {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 90vw;
    max-width: 800px;
    max-height: 85vh;
    padding: 25px;
    animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
}



@keyframes overlayShow {
    from {
      opacity: 0;
    }
    to {
      opacity: 1;
    }
  }
  
  @keyframes contentShow {
    from {
      opacity: 0;
      transform: translate(-50%, -48%) scale(0.96);
    }
    to {
      opacity: 1;
      transform: translate(-50%, -50%) scale(1);
    }
  }

  .TooltipContent {
    animation-duration: 400ms;
    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
    will-change: transform, opacity;
  }
  .TooltipContent[data-state='delayed-open'][data-side='top'] {
    animation-name: slideDownAndFade;
  }
  .TooltipContent[data-state='delayed-open'][data-side='right'] {
    animation-name: slideLeftAndFade;
  }
  .TooltipContent[data-state='delayed-open'][data-side='bottom'] {
    animation-name: slideUpAndFade;
  }
  .TooltipContent[data-state='delayed-open'][data-side='left'] {
    animation-name: slideRightAndFade;
  }
  
  .table-header {
    top: 80px
  }

  @media screen and (max-width: 768px) {
    .VictoryContainer {
      user-select: auto !important;
      pointer-events: auto !important;
      touch-action: auto !important;
    }
}


@media only screen and (max-width: 1024px)  {
	/* Force table to not be like tables anymore */
	table, thead, tbody, th, td, tr { 
		display: block; 
	}
    .DropdownMenuContent,
.DropdownMenuSubContent {
  min-width: 0px!important;
}
}

.player-wrapper {
  position: relative;
  padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
}

.react-player {
  position: absolute;
  top: 0;
  left: 0;
}


.transition-bund {
    transition: all 500ms ease-in-out 0ms
}

.text-small {
    font-size: 1.15rem;

}

.header-border {
    border-bottom-color: rgba(0,0,0,0.15);
}

.z-300 {
    z-index: 300;
}

